# mtuci-DSA-2

./: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  4_beta.ipynb  README.md  course_work copy.ipynb  course_work.ipynb  course_work_task.txt  pyproject.toml  schedule.xlsx  schedule_genetic.xlsx  teachers.json  test.ipynb  test.py  test2.py  test3_cursor.py  test4.py  ОТЧЁТ_СИАОД_КУРСОВАЯ_БВТ2201_ШамсутдиновРФ.docx
