[project]
name = "dsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.4",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pulp>=2.9.0",
    "pygame>=2.6.1",
    "tabulate>=0.9.0",
]
